--- a/src/main/config/sample_config.json
+++ b/src/main/config/sample_config.json
@@ -1,5 +1,5 @@
 {
-  "startPages": ["https://www.udacity.com/", "https://www.informit.com/articles/article.aspx?p=26872&seqNum=5"],
+  "startPages": ["https://www.udacity.com/", "https://playruneterra.com/"],
   "ignoredUrls": ["https://blog.udacity.com/.*"],
   "ignoredWords": ["^.{1,3}$"],
   "parallelism": 4,
