--- a/src/main/config/sample_config_sequential.json
+++ b/src/main/config/sample_config_sequential.json
@@ -1,5 +1,5 @@
 {
-  "startPages": ["https://www.udacity.com/"],
+  "startPages": ["https://www.udacity.com/", "https://playruneterra.com/"],
   "ignoredUrls": ["https://blog.udacity.com/.*"],
   "ignoredWords": ["^.{1,3}$"],
   "implementationOverride": "com.udacity.webcrawler.SequentialWebCrawler",
